# translate-nano

./: .gitignore  README.md  pyproject.toml
c4-en-ja-64/: sample_count.json
c4-ja-parquet/: sample_count.json
dataset/: c4-en-64_download.py  c4_download.py  filter_c4_by_tokens.py  token_distribution.py  translate_c4_to_parquet.py  translate_parquet_to_parquet.py
scripts/: upload_c4_en_64.py
scripts/gpt-oss/: vllm-gpt-oss.sh  vllm_gpt-oss_0.sh  vllm_gpt-oss_1.sh  vllm_gpt-oss_2.sh  vllm_gpt-oss_3.sh
scripts/plamo/: vllm_plamo_0.sh  vllm_plamo_1.sh  vllm_plamo_3.sh
