[project]
name = "translate-nano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub",
    "datasets",
    "torch>=2.7.1",
    "torchvision>=0.23.0",
    "vllm>=0.12.0",
    "openai",
    "tiktoken",
]
[tool.uv.sources]
torch = [
  { index = "pytorch-cu129"},
]
torchvision = [
  { index = "pytorch-cu129"},
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
